force-app/main/default/objects/Task_Template__mdt/Task_Template__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata Type holding various Task Templates</description>
    <label>Task Template</label>
    <pluralLabel>Task Templates</pluralLabel>
</CustomObject>