force-app/main/default/objects/Task_Template__mdt/fields/Default_Due_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Due_In_Days__c</fullName>
    <label>Default Due In (Days)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>